--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -50,12 +50,10 @@
                 <source>menu.settings</source>
                 <target>Inställningar</target>
             </trans-unit>
-            
             <trans-unit id="footer.contact">
                 <source>footer.contact</source>
                 <target>Kontakta oss</target>
             </trans-unit>
-
             <trans-unit id="homepage.cta.header">
                 <source>homepage.cta.header</source>
                 <target>I Kompisbyrån övar vi svenska och fikar.</target>
@@ -357,6 +355,70 @@
             <trans-unit id="connection_request.form.button">
                 <source>connection_request.form.button</source>
                 <target>Kompisfika</target>
+            </trans-unit>
+            <trans-unit id="terms.header">
+                <source>terms.header</source>
+                <target>Villkor</target>
+            </trans-unit>
+            <trans-unit id="terms.ingress">
+                <source>terms.ingress</source>
+                <target>Kompisbyrån förmedlar kontakten mellan personer som är nya i Sverige med personer som har bott i Sverige länge.</target>
+            </trans-unit>
+            <trans-unit id="terms.list">
+                <source>terms.list</source>
+                <target><![CDATA[ 
+                    <ul>
+                        <li>
+                            Kompisbyrån skapar kontakt mellan nya kompisar baserat på gemensamma intressen. 
+                            Kompisbyrån ansvarar endast för att matcha ihop personer som har bott i Sverige under kortare tid med 
+                            personer som har bott i Sverige länge.
+                        </li>
+                        <li>
+                            Alla över 18 år (myndiga) får delta.
+                        </li>
+                        <li>
+                            Du betalar bara för din egen fika, att registrera sig är gratis.
+                        </li>
+                        <li>
+                            Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
+                        </li>
+                        <li>
+                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att 
+                            informationen; kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan 
+                            hitta nya kompisar till dig, att din information och e-mail skickas till din nya kompis, och att vi 
+                            bjuder in dig till Kompisbyråns aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter 
+                            som finns registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil.
+                        </li>    
+                        <li>
+                            Vår ambition är att hitta en ny kompis till dig inom 14 dagar, men det kan ta både kortare och längre tid 
+                            beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan 
+                            få vänta.
+                        </li>
+                        <li>
+                            När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett e-mail till dig, oftast inom 48 timmar.
+                        </li>
+                        <li>
+                            Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
+                        </li>
+                        <li>
+                            En kompisfika eller ett musikmöte sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du träffa en 
+                            ny Fikakompis eller Musikkompis, loggar du in och anmäler dig igen.
+                        </li>
+                        <li>    
+                            Om du vill avregistrera dig, skicka ett e-mail till kontakt@kompisbyran.se.
+                        </li>
+                        <li>
+                            Kompisbyrån kan inte garantera att vi hittar en ny kompis till dig men vi gör alltid vårt bästa.
+                        </li>
+                        <li>
+                            Vi vill hela tiden bli bättre på vårt arbete. Därför skickar vi ett e-mail till dig efter att du har 
+                            träffat din nya kompis för att fråga hur ert möte var.
+                        </li>
+                    </ul>]]></target>
+            </trans-unit>
+            <trans-unit id="terms.outro">
+                <source>terms.outro</source>
+                <target>Tack för att du accepterar Kompisbyråns villkor!</target>
             </trans-unit>
         </body>
     </file>
