Video and copy for 3rd music video

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -165,7 +165,7 @@
             </trans-unit>
             <trans-unit id="register.musicfriend.video3">
                 <source>register.musicfriend.video3</source>
-                <target>Bacon ipsum dolor amet tri-tip meatball pork chop bacon spare ribs shank short ribs tail kevin pork loin. Ball tip beef picanha, pork venison fatback spare ribs biltong boudin pork chop kevin bacon hamburger. Shoulder ball tip sirloin sausage kielbasa. Kevin short loin tail ribeye frankfurter pig. Sirloin tongue prosciutto flank short loin leberkas meatloaf pastrami ground round swine ham hock pancetta shank.</target>
+                <target>Bahar Hasko, en 25-årig, kurdisk engelskalärare, föddes i Kahtania i Syrien. I dag bor och studerar hon i Sverige. Bahar och Eva Dahlgren träffades en dag i Bahars hem, där de pratade om musik som språköverskridande. I slutet av dagen överraskades Eva av Bahar, som hade anordnat att en barnorkester spelade Evas klassiska ”Vem tänder stjärnorna”.</target>
             </trans-unit>
             <trans-unit id="register.how_it_works.header">
                 <source>register.how_it_works.header</source>
