Updated video copy

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -161,7 +161,7 @@
             </trans-unit>
             <trans-unit id="register.musicfriend.video3">
                 <source>register.musicfriend.video3</source>
-                <target>Bahar Hasko, en 25-årig, kurdisk engelskalärare, föddes i Kahtania i Syrien. I dag bor och studerar hon i Sverige. Bahar och Eva Dahlgren träffades en dag i Bahars hem, där de pratade om musik som språköverskridande. I slutet av dagen överraskades Eva av Bahar, som hade anordnat att en barnorkester spelade Evas klassiska ”Vem tänder stjärnorna”.</target>
+                <target>Bahar Hasko, en 25-årig, kurdisk engelskalärare, föddes i Kahtania i Syrien. I dag bor och studerar hon i Sverige. Bahar och Eva Dahlgren träffades en dag och pratade om musik som språköverskridande. I slutet av dagen överraskades Eva av Bahar, som hade anordnat att en barnorkester spelade Evas klassiska ”Vem tänder stjärnorna”.</target>
             </trans-unit>
             <trans-unit id="register.how_it_works.header">
                 <source>register.how_it_works.header</source>
