--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -300,25 +300,18 @@
             </trans-unit>
             <trans-unit id="user.settings.intro">
                 <source>user.settings.intro</source>
-                <target>
-                    <li>
-                    Vad roligt att du vill vara med i Kompisbyrån. Här svarar du på några frågor om dig själv. 
+                <target>Vad roligt att du vill vara med i Kompisbyrån. Här svarar du på några frågor om dig själv. 
                     Vi tror att det är det personliga mötet som förenar människor och vill skapa så bra förutsättningar 
                     för ett lyckat möte. Därför matchar vi ihop nya kompisar, främst utifrån gemensamma eller 
                     kompletterande intressen. 
-                    </li>
-                    <li>
-                       Du kan bli Fikakompis eller Musikkompis: 
-                    </li>
-                    <li>
+                    
+                    Du kan bli Fikakompis eller Musikkompis: 
+                   
                     Fikakompis - Du blir matchad med en person som har liknande intressen som du har. Ni träffas och övar 
                     svenska på ett kafé i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.
-                    </li>
-                    <li>
+                    
                     Musikkompis - Du blir matchad med en person som också gillar musik. Ni träffas och utbyter musikerfarenheter 
-                    på en offentlig plats i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.
-                    </li>
-                </target>
+                    på en offentlig plats i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.</target>
             </trans-unit>
             <trans-unit id="index.header">
                 <source>index.header</source>
