--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -232,11 +232,11 @@
             </trans-unit>
             <trans-unit id="user.form.want_to_learn.choice.learn">
                 <source>user.form.want_to_learn.choice.learn</source>
-                <target>Swedish is not my mother tounge</target>
+                <target>I want to meet a Swede who has lived in Sweden for a long time</target>
             </trans-unit>
             <trans-unit id="user.form.want_to_learn.choice.teach">
                 <source>user.form.want_to_learn.choice.teach</source>
-                <target>Swedish is my mother tounge (also pick if you are a fluent Swedish speaker)</target>
+                <target>I speak Swedish fluently and am established in Sweden</target>
             </trans-unit>
             <trans-unit id="user.form.categories">
                 <source>user.form.categories</source>
